@@ -23,7 +23,7 @@ const colorPrices = {
 
 const customImagePrice = 150_000;
 
-const unbuyableThemes = [3, 4, 5, 6, 25, 26, 27];
+const unbuyableThemes = [3, 4, 5, 6, 25, 26, 27 /* FIXME: Delete this for launch */, 47];
 const helloKittyThemes = [31, 32, 33, 34, 35, 36, 37];
 
 const previewProfileData: {
