@@ -19,6 +19,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 - Trocar missões diárias! Agora é possível mudar uma de suas missões diárias. Missões trocadas não dão prêmios em estrelinhas, mas ainda dão o bônus especial. - Sugerido por @mich_solitario.
 - Novo comando `/top fazendeiros`. Veja os fazendeiros que mais colheram um tipo de planta.
 - Criado um top de missões diárias no `/top diversos`. Apenas as dailies finalizadas após o lançamento desta versão contam.
+- Novo tema de fundo de carta: Berserk. Criado por @dszalone.
 
 ### Changed
 
